# routes/index.js
@@ -1,6 +1,7 @@
 const router = require('express').Router();
 
 router.use('/', require('./swagger'));
+router.use('/auth', require('./auth'));
 router.use('/books', require('./books'));
 router.use('/authors', require('./authors'));
 
